--- a/assets/styles.css
+++ b/assets/styles.css
@@ -16,7 +16,7 @@ body {
 
 .logo-stondato {
     border-radius: 8px;
-  }
+}
 
 .navboxes {
     /*     border-radius: 12px;
@@ -178,7 +178,7 @@ body {
     }
 }
 
-.autovendita{
+.autovendita {
     border-radius: 20px;
     background-color: #f5f5f7;
     padding: 20px;
@@ -202,7 +202,7 @@ body {
 .image-container {
     position: relative;
     min-width: 100%;
-    border-radius: 20px; 
+    border-radius: 20px;
     object-fit: contain;
     background-size: cover;
     background-position: center;
@@ -213,7 +213,8 @@ body {
     display: block;
 }
 
-.image-container .prev, .image-container .next {
+.image-container .prev,
+.image-container .next {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
@@ -265,11 +266,11 @@ body {
     cursor: pointer;
     text-decoration: none;
     transition: background-color 0.3s;
-  }
-  
-  .pulsante:hover {
+}
+
+.pulsante:hover {
     background-color: #b41e0a;
-  }
+}
 
 
 /* CSS vendita auto */
