--- a/assets/styles.css
+++ b/assets/styles.css
@@ -142,13 +142,12 @@ body {
 
 /* Stile dell header */
 .header {
-    position: relative;
+    position: fixed;
+    top: 0;
+    width: 100%;
     background-color: #db230a;
-    /* or any other background color */
-    padding: 20px;
-    /* or any other padding */
-    transition: all 0.3s ease-in-out;
-    /* add a smooth transition effect */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
 }
 
 .header.scrolled {
