--- a/assets/styles.css
+++ b/assets/styles.css
@@ -98,6 +98,7 @@ body {
     margin: 10px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.308);
     transition: transform 0.3s;
+    font-size: 1.5em;
 }
 
 .service:hover {
