color fix pannellini

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -93,7 +93,7 @@ body {
 /* Pannellini */
 .service {
     border-radius: 8px;
-    background-color: #ffead6;
+    background-color: #445aeb5e;
     padding: 20px;
     margin: 10px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.308);
