--- a/assets/styles.css
+++ b/assets/styles.css
@@ -69,7 +69,7 @@ body {
     top: 50%;
     transform: translateY(-50%);
     font-size: 3em;
-    color: #0f1d75;
+    color: #1d1d1d;
     /*background-color: rgba(0, 0, 0, 0.5);*/
     padding: 10px;
     cursor: pointer;
@@ -140,7 +140,7 @@ body {
     position: fixed;
     top: 0;
     width: 100%;
-    background-color: #0f1d75;
+    background-color: #1d1d1d;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     z-index: 1000;
 }
@@ -152,7 +152,7 @@ body {
     right: 20px;
     width: calc(100% - 40px);
     padding: 10px;
-    background-color: #0f1d75;
+    background-color: #1d1d1d;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     z-index: 1000;
     border-radius: 20px;
