--- a/assets/styles.css
+++ b/assets/styles.css
@@ -289,7 +289,7 @@ body {
     flex-direction: column;
     gap: 10px;
     text-align: center;
-    background-color: #0f1d75;
+    background-color: #1d1d1d;
     padding: 10px;
 }
 
