--- a/assets/styles.css
+++ b/assets/styles.css
@@ -23,8 +23,45 @@ body {
 }
 
 .navboxes:hover {
-    /*     background-color: #00334b; */
     color: #686868
+}
+
+/* schermata di caricamento */
+#loading-screen {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #1d1d1d; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+    overflow: hidden;
+}
+
+/* Logo */
+#loading-logo {
+    width: 250px;
+    height: auto;
+    animation: expandAndFade 2s ease-in-out forwards;
+}
+
+/* Animazione di espansione e dissolvenza */
+@keyframes expandAndFade {
+    0% {
+        opacity: 0;
+        transform: scale(0.8);
+    }
+    50% {
+        opacity: 1;
+        transform: scale(1.1);
+    }
+    100% {
+        opacity: 0;
+        transform: scale(1.3);
+    }
 }
 
 /* Stile dello slideshow */
